--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,22 @@ body {
 	font-family: 'Roboto', sans-serif;
 	font-weight: 300;
 }
+.no-scroll {
+  overflow: hidden;
+}
 .header {
 	display: flex;
 	align-items: center;
-	justify-content: space-between;
 	height: 104px;
 	padding-left: 34px;
 	border-bottom: 1px solid #D4D4D4;
 	color: #363636;
+}
+.m-menu {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
 }
 .header-logo {
 	display: flex;
@@ -171,7 +179,9 @@ body {
 	border-radius: 0px 0px 5px 5px;
 	padding-bottom: 25px;
 	padding-top: 25px;
-	cursor: pointer;
+  cursor: pointer;
+  text-decoration: none;
+  color: #5671F6;
 }
 .trailer-button-icon {
 	margin-right: 14px;
@@ -270,15 +280,19 @@ body {
   line-height: 28px;
   color: #a5a5a5;
   margin-right: 30px;
+  cursor: pointer;
 }
 .section-title.active {
   font-weight: 900;
   color: #363636;
 }
 .tabs-content {
-  display: flex;
+  display: none;
   align-items: center;
   flex-wrap: wrap;
+}
+.tabs-content.visible {
+  display: flex;
 }
 .card {
   display: flex;
@@ -316,7 +330,8 @@ body {
 .section-news-title {
 	font-weight: 900;
 	color: #000000;
-	margin-bottom: 65px;
+  margin-bottom: 65px;
+  cursor: text;
 }
 .news-cards {
 	display: flex;
@@ -341,6 +356,17 @@ body {
 	line-height: 16px;
 	color: #000000;
 	margin-top: 14px;
+}
+.button-next {
+  display: none;
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  z-index: 99;
+  cursor: pointer;
 }
 
 
@@ -421,19 +447,65 @@ body {
 		height: 80px;
 		padding-right: 2.5%;
 		padding-left: 2.5%;
-	}
+  }
+  .m-menu {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    position: fixed;
+    top: 80px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: calc(100% - 80px);
+    background: #5671F6;
+  }
+  .m-menu.active {
+    display: flex;
+  }
 	.header-logo::after {
 		display: none;
 	}
-	.search-input {
-		display: none;
-	}
-	.buttons-group {
-		display: none;
-	}
 	.mobile-buttons {
-		display: block;
-	}
+    display: block;
+    margin-left: auto;
+  }
+  .buttons-group {
+    height: auto;
+    flex-direction: column;
+  }
+  .search-input {
+    margin: 0;
+    width: 260px;
+    height: 50px;
+    border-radius: 5px;
+    border: none;
+    background-image: none;
+  }
+  .navigation {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+  }
+  .navigation-link {
+    color: #ffffff;
+    margin-bottom: 18px;
+    margin-right: 0;
+    font-size: 18px;
+    line-height: 21px;
+  }
+  .navigation-link:last-child {
+    margin-bottom: 0;
+  }
+  .sign-up {
+    background-color: transparent;
+    color: #ffffff;
+    border: none;
+    margin-bottom: 30px;
+  }
 	.film {
 		padding-top: 50px;
 		padding-bottom: 60px;
@@ -452,7 +524,13 @@ body {
 	.news {
 		padding-top: 50px;
 		padding-bottom: 70px;
-	}
+  }
+  .news-card {
+    max-width: 90%;
+  }
+  .button-next {
+    display: block;
+  }
 }
 
 @media (max-width: 576px) {
